deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edo
  namespace: edo
spec:
  selector:
    app.kubernetes.io/name: edo
  ports:
    - name: http
      port: 80
      targetPort: http
