deploy/kubernetes/ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edo
  namespace: edo
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "7200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "7200"
spec:
  ingressClassName: nginx
  tls:
    - hosts: [edo.example.com]
      secretName: edo-tls
  rules:
    - host: edo.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edo
                port: { number: 80 }
